--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div>I'm random guy who like to code stuff</div>
         <div style="font-size: x-large; margin-top: 30px; margin-bottom: 10px;">You can find me there</div>
         <div style="margin-top: 25px; margin-bottom: 0px;">
-            <a class="i" href="https://steamcommunity.com/id/Nyjako" target="_blank">
-                <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);">
+            <a href="https://steamcommunity.com/id/Nyjako" target="_blank">
+                <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);" alt="Steam">
             </a>
-            <a class="i" href="https://github.com/Nyjako" target="_blank">
-                <img src="images/github.png" width="80" height="80" style="filter: invert(100%);">
+            <a href="https://github.com/Nyjako" target="_blank">
+                <img src="images/github.png" width="80" height="80" style="filter: invert(100%);" alt="Github">
             </a>
         </div>
     </div>
