--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 <body style="margin: 0; width: 100%; height: 100%;">
     <div id="card" class="card" onclick="clicked();">
         <h1>Nyjako</h1>
-        <div>I'm random guy who like to code stuff</div>
-        <div style="font-size: x-large; margin-top: 30px; margin-bottom: 10px;">You can find me there</div>
-        <div style="margin-top: 25px; margin-bottom: 0px;">
-            <a class="qLinks" href="https://steamcommunity.com/id/Nyjako" target="_blank">
-                <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);" alt="Steam">
-            </a>
-            <a class="qLinks" href="https://github.com/Nyjako" target="_blank">
-                <img src="images/github.png" width="80" height="80" style="filter: invert(100%);" alt="Github">
-            </a>
-        </div>
-        <div style="font-size: x-large; margin-top: 30px; margin-bottom: 0px;">
-            <span id="text">↓ <i>Click card for projects list</i> ↓</span>
+        <div id="info">
+            <div>I'm random guy who like to code stuff</div>
+            <div style="font-size: x-large; margin-top: 30px; margin-bottom: 10px;">You can find me there</div>
+            <div style="margin-top: 25px; margin-bottom: 0px;">
+                <a class="qLinks" href="https://steamcommunity.com/id/Nyjako" target="_blank">
+                    <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);" alt="Steam">
+                </a>
+                <a class="qLinks" href="https://github.com/Nyjako" target="_blank">
+                    <img src="images/github.png" width="80" height="80" style="filter: invert(100%);" alt="Github">
+                </a>
+            </div>
+            <div style="font-size: x-large; margin-top: 30px; margin-bottom: 0px;">
+                <span id="text">↓ <i>Click card for projects list</i> ↓</span>
+            </div>
         </div>
         <div class="projects" id="projects"></div>
     </div>
