--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
 
 <body style="margin: 0; width: 100%; height: 100%;">
     <div id="card" class="card" onclick="clicked();">
-        <h1 id="Nyjako" style="margin-bottom: 0;">Nyjako</h1>
-        <div id="info">
-            <div>I'm random guy who like to code stuff</div>
-            <div style="font-size: 1.5vw; margin-top: 30px; margin-bottom: 10px;"><i>You can find me there</i></div>
-            <div style="margin-top: 25px; margin-bottom: 0px;">
-                <a class="qLinks" href="https://steamcommunity.com/id/Nyjako" target="_blank">
-                    <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);" alt="Steam">
-                </a>
-                <a class="qLinks" href="https://github.com/Nyjako" target="_blank">
-                    <img src="images/github.png" width="80" height="80" style="filter: invert(100%);" alt="Github">
-                </a>
+        <div id="content">
+            <h2 id="Nyjako" style="margin-bottom: 5px;">Kacper <i>"Nyjako"</i> Tucholski</h2>
+            <div id="info">
+                <i>I like to code stuff</i>
+                <!-- <div style="font-size: 1.5vw; margin-top: 30px; margin-bottom: 10px;"><i>You can find me there</i></div> -->
+                <div style="margin-top: 25px; margin-bottom: 0px;">
+                    <a class="qLinks" href="https://steamcommunity.com/id/Nyjako" target="_blank">
+                        <img src="images/steam.png" width="80" height="80" style="filter: invert(100%);" alt="Steam">
+                    </a>
+                    <a class="qLinks" href="https://github.com/Nyjako" target="_blank">
+                        <img src="images/github.png" width="80" height="80" style="filter: invert(100%);" alt="Github">
+                    </a>
+                </div>
+                <div style="font-size: x-large; margin-top: 30px; margin-bottom: 0px;">
+                    <span id="text" style="font-size: 1.5vw;">↓ <i>Click card for projects list</i> ↓</span>
+                </div>
             </div>
-            <div style="font-size: x-large; margin-top: 30px; margin-bottom: 0px;">
-                <span id="text" style="font-size: 1.5vw;">↓ <i>Click card for projects list</i> ↓</span>
-            </div>
+            <div class="projects" id="projects"></div>
         </div>
-        <div class="projects" id="projects"></div>
     </div>
 </body>
 
