--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body style="margin: 0; width: 100%; height: 100%;">
     <div id="card" class="card" onclick="clicked();">
         <div id="content">
-            <h2 id="Nyjako" style="margin-bottom: 5px;">Kacper <i>"Nyjako"</i> Tucholski</h2>
-            <div id="info">
+            <h2 id="Nyjako" style="margin-bottom: 5px;">Kacper „Nyjako” Tucholski</h2>
+            <div id="info" style='font-family: "Helvetica";'>
                 <i>I like to code stuff</i>
                 <!-- <div style="font-size: 1.5vw; margin-top: 30px; margin-bottom: 10px;"><i>You can find me there</i></div> -->
                 <div style="margin-top: 25px; margin-bottom: 0px;">
