--- a/TicTacToe/Bloki/index.html
+++ b/TicTacToe/Bloki/index.html
@@ -37,6 +37,10 @@
             <h1>SelectOpponent</h1>
             <img src="./images/TicTacToe - opponentMenu.svg" alt="" srcset="">
         </li>
+        <li>
+            <h1>calculateBestMove</h1>
+            <img src="./images/TicTacToe - calculateBestMove.svg" alt="" srcset="">
+        </li>
     </ul>
 </body>
 </html>
