--- a/TicTacToe/Bloki/index.html
+++ b/TicTacToe/Bloki/index.html
@@ -27,20 +27,50 @@
         margin-bottom: 50px;
     }
 
-    h1 {
+    h1, p {
         text-align: center;
     }
 </style>
 <body>
     <ul>
         <li>
-            <h1>SelectOpponent</h1>
+            <h1>Main</h1>
+            <p>Traktuj to jako baze programu i inicjację zmiennych globalnych</p>
+            <img src="./images/TicTacToe - Main.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>Setup</h1>
+            <p>Funkcja arduino wykożystywana do inicjacji zmiennych</p>
+            <img src="./images/TicTacToe - Setup.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>Loop</h1>
+            <p>Tak... Pętla... na szyi (zmieni się jak dodam wszystkie funkcjie)</p>
+            <img src="./images/TicTacToe - Loop.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>Select Opponent</h1>
+            <p>Jak nazwa wskazuje, Wybierasz czy grasz ze sztuczną inteligencją czy z kolegą.</p>
+            <p>Ja nie mam kolegów więc napisałem romana, moją zaawansowaną sztuczną inteligencję do grania w kółko i krzyżyk</p>
             <img src="./images/TicTacToe - opponentMenu.svg" alt="" srcset="">
         </li>
         <li>
-            <h1>calculateBestMove</h1>
+            <h1>calculate Best Move</h1>
+            <p>Roman szuka dobrego ruchu</p>
             <img src="./images/TicTacToe - calculateBestMove.svg" alt="" srcset="">
         </li>
+        <li>
+            <h1>find Win</h1>
+            <p>Dzięki tej funkcji roman wie kiedy może wygrać</p>
+            <img src="./images/TicTacToe - findWin.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>find Mov</h1>
+            <p>Jeżeli nie może wygrać to szuka tutaj ruchu</p>
+            <img src="./images/TicTacToe - findMov.svg" alt="" srcset="">
+        </li>
     </ul>
+
+    <h1>SEND HELP!!!</h1>
 </body>
 </html>
