--- a/TicTacToe/Bloki/index.html
+++ b/TicTacToe/Bloki/index.html
@@ -45,8 +45,13 @@
         </li>
         <li>
             <h1>Loop</h1>
-            <p>Tak... Pętla... na szyi (zmieni się jak dodam wszystkie funkcjie)</p>
+            <p>Tak... Pętla... na szyi (zmieni się jeszcze)</p>
             <img src="./images/TicTacToe - Loop.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>Game Loop</h1>
+            <p>Tak... Kolejna Pętla</p>
+            <img src="./images/TicTacToe - gameLoop.svg" alt="" srcset="">
         </li>
         <li>
             <h1>Select Opponent</h1>
@@ -68,6 +73,11 @@
             <h1>find Mov</h1>
             <p>Jeżeli nie może wygrać to szuka tutaj ruchu</p>
             <img src="./images/TicTacToe - findMov.svg" alt="" srcset="">
+        </li>
+        <li>
+            <h1>Player Won</h1>
+            <p>Trzeba sprawdzić czy ktoś wygrał</p>
+            <img src="./images/TicTacToe - playerWon.svg" alt="" srcset="">
         </li>
     </ul>
 
